# OpenVINO-YOLOV4

./: pyproject.toml  yolo_v4.py  yolo_v4_tiny.py
yolov4-relu/: convert_weights_pb.py
